syntax = "proto3";

package notification;

option go_package = "github.com/erazz/outage-service/internal/delivery/grpc/proto;proto";


message Notification {
  string id = 1;
  string title = 2;
  string description = 3;
  string resource_type = 4;
  string location = 5;
  int64 start_time = 6;
  int64 end_time = 7;
  int64 created_at = 8;
}

message NotificationId { string id = 1; }
message Empty {}

message CreateNotificationRequest {
  string title = 1;
  string description = 2;
  string resource_type = 3;
  string location = 4;
  int64 start_time = 5;
  int64 end_time = 6;
}

message UpdateNotificationRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string resource_type = 4;
  string location = 5;
  int64 start_time = 6;
  int64 end_time = 7;
}

message ListNotificationsRequest {
  string resource_type = 1;
  string location = 2;
  int64 date_from = 3;
  int64 date_to = 4;
}

message Notifications { repeated Notification items = 1; }

service NotificationService {
  rpc CreateNotification(CreateNotificationRequest) returns (Notification);
  rpc GetNotification(NotificationId) returns (Notification);
  rpc ListNotifications(ListNotificationsRequest) returns (Notifications);
  rpc UpdateNotification(UpdateNotificationRequest) returns (Notification);
  rpc DeleteNotification(NotificationId) returns (Empty);
  rpc GetNotificationsByDate(ListNotificationsRequest) returns (Notifications);
  rpc GetNotificationsByLocation(ListNotificationsRequest) returns (Notifications);
  rpc GetNotificationsByResource(ListNotificationsRequest) returns (Notifications);
  rpc HealthCheck(Empty) returns (Empty);
  rpc Ping(Empty) returns (Empty);
  rpc SubscribeNotifications(Empty) returns (stream Notification);
  rpc AckNotification(NotificationId) returns (Empty);
}
